Implementacion de inputs y estilo

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/styleLogin.css">
     <title>Login</title>
 </head>
+
 <body>
-    <h1>Hola mundo</h1>
+    <section class="contenedor">
+        <label class="text1">
+            <input type="text" class="input1" placeholder=" ">
+            <span class="span1">Email</span>
+        </label>
+        <label class="text2">
+            <input type="text" class="input2" placeholder=" ">
+            <span class="span2">Contraseña</span>
+        </label>
+    </section>
 </body>
+
 </html>
