--- a/index.html
+++ b/index.html
@@ -9,16 +9,24 @@
 </head>
 
 <body>
-    <section class="contenedor">
-        <label class="text1">
-            <input type="text" class="input1" placeholder=" ">
-            <span class="span1">Email</span>
-        </label>
-        <label class="text2">
-            <input type="text" class="input2" placeholder=" ">
-            <span class="span2">Contraseña</span>
-        </label>
-    </section>
+    <main class="contenedor">
+        <article>
+            <header class="login">Login</header>
+            <label class="text1">
+                <input type="text" class="input1" placeholder=" ">
+                <span class="span1">Email</span>
+            </label>
+            <label class="text2">
+                <input type="text" class="input2" placeholder=" ">
+                <span class="span2">Contraseña</span>
+            </label>
+            <hr>
+            <br>
+            <div class="button-container">
+                <div class='button -regular center'>Login</div>
+            </div>
+        </article>
+    </main>
 </body>
 
 </html>
