Diseño de login terminado

--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
 </head>
 
 <body>
-    <main class="contenedor">
-        <article>
-            <header class="login">Login</header>
-            <label class="text1">
-                <input type="text" class="input1" placeholder=" ">
-                <span class="span1">Email</span>
-            </label>
-            <label class="text2">
-                <input type="text" class="input2" placeholder=" ">
-                <span class="span2">Contraseña</span>
-            </label>
-            <hr>
-            <br>
-            <div class="button-container">
-                <div class='button -regular center'>Login</div>
-            </div>
-        </article>
-    </main>
+    <div class="capa">
+        <main class="contenedor">
+            <section class="card">
+                <header class="login">Login</header>
+                <label class="text1">
+                    <input type="text" class="input1" placeholder=" ">
+                    <span class="span1">Email</span>
+                </label>
+                <label class="text2">
+                    <input type="password" class="input2" placeholder=" ">
+                    <span class="span2">Password</span>
+                </label>
+                <button class="btn">Login</button>
+
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
