--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styleLogin.css">
+    <link rel="stylesheet" href="./assets/style/styleLogin.css">
     <title>Login</title>
 </head>
 
 <body>
     <div class="capa">
         <main class="contenedor">
-            <section class="card">
+            <form class="card" fu>
                 <header class="login">Login</header>
                 <label class="text1">
-                    <input type="text" class="input1" placeholder=" ">
+                    <input type="text" class="input1" placeholder=" " id="email" required>
                     <span class="span1">Email</span>
                 </label>
                 <label class="text2">
-                    <input type="password" class="input2" placeholder=" ">
+                    <input type="password" class="input2" placeholder=" " id="clave" required>
                     <span class="span2">Password</span>
                 </label>
-                <button class="btn">Login</button>
-
-            </section>
+                <button class="btn" id="button">Login</button>
+            </form>
         </main>
     </div>
 </body>
+<script src="./assets/js/logicaLogin.js"></script>
+<script src="./assets/js/logicaLogin2.js"></script>
 
 </html>
