--- a/assets/pages/Contacto.html
+++ b/assets/pages/Contacto.html
@@ -13,16 +13,17 @@
         <nav>
             <ul  class="contat-list">
                 <li><a href="/assets/pages/Contacto.html">Contactos</a></li>
-                <li><a href="#">Agregar Contacto</a></li>
                 <li><a href="#">Favoritos</a></li>
                 <li><a href="#">ToDo List</a></li>
                 <li><a href="/index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
-    <Section>
+    <Section class="contenedor-contact">
         <div class="card" id="contactCard">
-
+            <button class="button-agregar" id="new-contact">
+                <span>Agregar</span>
+            </button>
         </div>
     </Section>
     <script src="/assets/js/logicaContacto.js"></script>
