--- a/assets/pages/Contacto.html
+++ b/assets/pages/Contacto.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/style/styleContacto.css">
     <link rel="stylesheet" href="/assets/style/styleNuevoContacto.css">
+    <link rel="stylesheet" href="/assets/style/styleDetalleContacto.css">
     <title>Contactos</title>
 </head>
 
@@ -24,6 +25,9 @@
         <div class="card" id="contactCard">
             <button class="button-agregar" id="show-form">
                 <span>Agregar</span>
+            </button>
+            <button class="button-detalles" id="detalles-lista" onclick="redirigir()">
+                <span>Detalles</span>
             </button>
         </div>
     </Section>
@@ -58,6 +62,7 @@
     </div>
     <script src="/assets/js/logicaContacto.js"></script>
     <script src="/assets/js/logicaNuevoContacto.js"></script>
+    <script src="/assets/js/logicaDetalleContacto.js"></script>
 </body>
 
 </html>
