--- a/assets/pages/Contacto.html
+++ b/assets/pages/Contacto.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="/assets/style/styleContacto.css">
     <link rel="stylesheet" href="/assets/style/styleNuevoContacto.css">
     <link rel="stylesheet" href="/assets/style/styleDetalleContacto.css">
-    <title>Contactos</title>
+    <title>Favoritos</title>
 </head>
 
 <body>
     <header>
         <nav>
             <ul class="contat-list">
+                <li><a href="#">Perfil</a></li>
                 <li><a href="/assets/pages/Contacto.html">Contactos</a></li>
-                <li><a href="#">Favoritos</a></li>
+                <li><a href="/assets/pages/Favorito.html">Favoritos</a></li>
                 <li><a href="#">ToDo List</a></li>
                 <li><a href="/index.html">Cerrar Sesión</a></li>
             </ul>
