--- a/assets/pages/DetalleContacto.html
+++ b/assets/pages/DetalleContacto.html
@@ -14,8 +14,9 @@
     <header>
         <nav>
             <ul class="contat-list">
+                <li><a href="#">Perfil</a></li>
                 <li><a href="/assets/pages/Contacto.html">Contactos</a></li>
-                <li><a href="#">Favoritos</a></li>
+                <li><a href="/assets/pages/Favorito.html">Favoritos</a></li>
                 <li><a href="#">ToDo List</a></li>
                 <li><a href="/index.html">Cerrar Sesión</a></li>
             </ul>
