--- a/assets/pages/Contacto.html
+++ b/assets/pages/Contacto.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul class="contat-list">
-                <li><a href="#">Perfil</a></li>
+                <li><a href="/assets/pages/Perfil.html">Perfil</a></li>
                 <li><a href="/assets/pages/Contacto.html">Contactos</a></li>
                 <li><a href="/assets/pages/Favorito.html">Favoritos</a></li>
                 <li><a href="#">ToDo List</a></li>
