--- a/assets/pages/DetalleContacto.html
+++ b/assets/pages/DetalleContacto.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/style/styleContacto.css">
-    <link rel="stylesheet" href="/assets/style/styleNuevoContacto.css">
-    <link rel="stylesheet" href="/assets/style/styleDetalleContacto.css">
+    <link rel="stylesheet" href="../style/styleContacto.css">
+    <link rel="stylesheet" href="../style/styleNuevoContacto.css">
+    <link rel="stylesheet" href="../style/styleDetalleContacto.css">
     <title>Document</title>
 </head>
 
@@ -14,11 +14,11 @@
     <header>
         <nav>
             <ul class="contat-list">
-                <li><a href="#">Perfil</a></li>
-                <li><a href="/assets/pages/Contacto.html">Contactos</a></li>
-                <li><a href="/assets/pages/Favorito.html">Favoritos</a></li>
+                <li><a href="../pages/Perfil.html">Perfil</a></li>
+                <li><a href="../pages/Contacto.html">Contactos</a></li>
+                <li><a href="../pages/Favorito.html">Favoritos</a></li>
                 <li><a href="#">ToDo List</a></li>
-                <li><a href="/index.html">Cerrar Sesión</a></li>
+                <li><a href="../../index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
