--- a/assets/pages/Favorito.html
+++ b/assets/pages/Favorito.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/style/styleContacto.css">
-    <link rel="stylesheet" href="/assets/style/styleNuevoContacto.css">
-    <link rel="stylesheet" href="/assets/style/styleDetalleContacto.css">
-    <link rel="stylesheet" href="/assets/style/styleFavorito.css">
+    <link rel="stylesheet" href="../style/styleContacto.css">
+    <link rel="stylesheet" href="../style/styleNuevoContacto.css">
+    <link rel="stylesheet" href="../style/styleDetalleContacto.css">
+    <link rel="stylesheet" href="../style/styleFavorito.css">
     <title>Favorito</title>
 </head>
 
@@ -15,11 +15,11 @@
     <header>
         <nav>
             <ul class="contat-list">
-                <li><a href="#">Perfil</a></li>
-                <li><a href="/assets/pages/Contacto.html">Contactos</a></li>
-                <li><a href="/assets/pages/Favorito.html">Favoritos</a></li>
+                <li><a href="../pages/Perfil.html">Perfil</a></li>
+                <li><a href="../pages/Contacto.html">Contactos</a></li>
+                <li><a href="../pages/Favorito.html">Favoritos</a></li>
                 <li><a href="#">ToDo List</a></li>
-                <li><a href="/index.html">Cerrar Sesión</a></li>
+                <li><a href="../../index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
@@ -27,9 +27,9 @@
         <div class="cardFavorito" id="contactCard-favorito">
         </div>
     </Section>
-    <script src="/assets/js/logicaContacto.js"></script>
-    <script src="/assets/js/logicaNuevoContacto.js"></script>
-    <script src="/assets/js/logicaDetalleContacto.js"></script>
-    <script src="/assets/js/logicaFavorito.js"></script>
+    <script src="../js/logicaContacto.js"></script>
+    <script src="../js/logicaNuevoContacto.js"></script>
+    <script src="../js/logicaDetalleContacto.js"></script>
+    <script src="../js/logicaFavorito.js"></script>
 </body>
 </html>
