--- a/assets/pages/Perfil.html
+++ b/assets/pages/Perfil.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/style/styleContacto.css">
-    <link rel="stylesheet" href="/assets/style/styleNuevoContacto.css">
-    <link rel="stylesheet" href="/assets/style/styleDetalleContacto.css">
-    <link rel="stylesheet" href="/assets/style/styleFavorito.css">
-    <link rel="stylesheet" href="/assets/style/stylePerfil.css">
+    <link rel="stylesheet" href="../style/styleContacto.css">
+    <link rel="stylesheet" href="../style/styleNuevoContacto.css">
+    <link rel="stylesheet" href="../style/styleDetalleContacto.css">
+    <link rel="stylesheet" href="../style/styleFavorito.css">
+    <link rel="stylesheet" href="../style/stylePerfil.css">
     <title>Perfil</title>
 </head>
 
@@ -16,17 +16,17 @@
     <header>
         <nav>
             <ul class="contat-list">
-                <li><a href="/assets/pages/Perfil.html">Perfil</a></li>
-                <li><a href="/assets/pages/Contacto.html">Contactos</a></li>
-                <li><a href="/assets/pages/Favorito.html">Favoritos</a></li>
+                <li><a href="../pages/Perfil.html">Perfil</a></li>
+                <li><a href="../pages/Contacto.html">Contactos</a></li>
+                <li><a href="../pages/Favorito.html">Favoritos</a></li>
                 <li><a href="#">ToDo List</a></li>
-                <li><a href="/index.html">Cerrar Sesión</a></li>
+                <li><a href="../../index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
     <Section>
         <figure class="perfil">
-            <div class="perfil-imagen"><img src="/assets/resources/img/yo.jpeg" alt="yo" /></div>
+            <div class="perfil-imagen"><img src="../resources/img/yo.jpeg" alt="yo" /></div>
             <figcaption>
               <h3>Angel Adolfo Méndez Orozco</h3>
               <h4>18 años</h4>
@@ -40,10 +40,10 @@
             </figcaption>
           </figure>
     </Section>
-    <script src="/assets/js/logicaContacto.js"></script>
-    <script src="/assets/js/logicaNuevoContacto.js"></script>
-    <script src="/assets/js/logicaDetalleContacto.js"></script>
-    <script src="/assets/js/logicaFavorito.js"></script>
-    <script src="/assets/js/logicaPerfil.js"></script>
+    <script src="../js/logicaContacto.js"></script>
+    <script src="../js/logicaNuevoContacto.js"></script>
+    <script src="../js/logicaDetalleContacto.js"></script>
+    <script src="../js/logicaFavorito.js"></script>
+    <script src="../js/logicaPerfil.js"></script>
 </body>
 </html>
